--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,17 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
+title: Felipe Schneider blog
+email: felipes (a) gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
+  Experienced Infrastructure Engineer with a demonstrated history of working in multinational information technology companies. 
+  Leadership and Problem-Solving skills. The main focus on Azure SQL solutions but also skilled in Microsoft infrastructure solutions, 
+  Virtualization, Security, and Powershell. I think teamwork and good communication are the basis of any successful team
+  SQL Server tuning, WIndows server administration, 
+  Programing Language C#, JAVA, C++, SQL, Powershell 
+Language: English advanced, Spanish Native
+twitter_username: felipes88
+github_username: felipeschneider88
 minimal_mistakes_skin: default
 search: true
 
