--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,7 @@ email: felipes (a) gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Experienced Infrastructure Engineer with a demonstrated history of working in multinational information technology companies. 
   Leadership and Problem-Solving skills. The main focus on Azure SQL solutions but also skilled in Microsoft infrastructure solutions, 
-  Virtualization, Security, and Powershell. I think teamwork and good communication are the basis of any successful team
-  SQL Server tuning, WIndows server administration, 
-  Programing Language C#, JAVA, C++, SQL, Powershell 
-Language: English advanced, Spanish Native
+  Virtualization, Security, and Powershell. I think teamwork and good communication are the basis of any successful team.
 twitter_username: felipes88
 github_username: felipeschneider88
 minimal_mistakes_skin: default
