correct link icon

--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/felipeschneider88"
-    - label: "Instagram"
+    - label: "LinedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/felipeschneideruy/"
 
