change description on landing and link

--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ plugins:
 author:
   name   : "Felipe Schneider"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "Me apasionan las bases de datos 🚀 y compatir el conocimiento ❤️"
   links:
     - label: "Twitter"
       icon: "fas fa-fw fa-twitter-square"
