--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
-
+  - jekyll-analytics
 author:
   name   : "Felipe Schneider"
   avatar : "/assets/images/bio-photo.jpg"
@@ -112,5 +112,7 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
-# Google Analytics
-google_analytics: G-SCETLP8B1P
+ekyll_analytics:
+  GoogleAnalytics:          # Add, if you want to track with Google Analytics
+    id: G-SCETLP8B1P          # Required - replace with your tracking id
+    anonymizeIp: false      # Optional - Default: false - set to true for anonymized tracking
