--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/felipeschneider88"
-    - label: "LinedIn"
+    - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/felipeschneideruy/"
 
