--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ search: true
 # Build settings
 markdown: kramdown
 remote_theme: "mmistakes/minimal-mistakes@4.22.0"
-minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "default", "dirt", "neon", "mint", "plum" "sunrise"
+minimal_mistakes_skin: "mint" # "air", "aqua", "contrast", "default", "dirt", "neon", "dark", "plum" "sunrise"
 locale: es-ES
 search: true
 # Outputting
